fixed overflowing text

--- a/app/assets/stylesheets/components/_greetingBox.scss
+++ b/app/assets/stylesheets/components/_greetingBox.scss
@@ -31,7 +31,7 @@
     flex-direction: column;
     justify-content: center;
     margin: 4vh 8vw;
-    max-height: 300px;
+    max-height: 1000px;
     text-align: center;
 }
 
@@ -40,7 +40,7 @@
   -webkit-writing-mode: vertical-rl;
   -moz-writing-mode: vertical-rl;
   -ms-writing-mode: vertical-rl;
-
+  height: 420px;
 }
 #blank {
     color:  #F7EDE2;
@@ -62,4 +62,5 @@
     }
     #japanese {text-align: center;}
     #english {width: auto;}
+    .myBio { font-size: 12px;}
 }
